Closed Bug 580703 Opened 15 years ago Closed 15 years ago

JM: "Assertion failure: !escaping[local],"

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Unassigned)

References

Details

(Keywords: assertion, regression, testcase)

let(w)(function () { w }) let(e)(function () { e }) asserts js debug shell on JM changeset 7c6f62fcbd91 with -m at Assertion failure: !escaping[local], at ../methodjit/FrameState-inl.h:702 when passed in as a CLI argument.
Assert is over-zealous, it tries to catch multiple DEFUPVAR ops for the same local. Here, two locals have the same slot because of block scoping. http://hg.mozilla.org/users/danderson_mozilla.com/moo/rev/e4d74ba7c8d9
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/bug580703.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.