[JAEGER] Removed over-zealous assert (bug 580703).